crates/privacy-pools-sdk/tests/ui/verified_proof_forged_preflight.rs
use privacy_pools_sdk::{PreflightedTransaction, core};

fn forge(plan: core::TransactionPlan, preflight: core::ExecutionPreflightReport) {
    let _forged = PreflightedTransaction { plan, preflight };
}

fn main() {}
